<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_student_activity">

    <EditText
        android:id="@+id/stu_edit_firstName"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:background="#FF424242"
        android:ems="10"
        android:hint="@string/stu_add_fname_context"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stu_edit_lastName"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:background="#FF424242"
        android:ems="10"
        android:hint="@string/stu_add_lname_context"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stu_edit_firstName" />

    <Button
        android:id="@+id/stu_update"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginEnd="6.5dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:background="@color/colorPrimary"
        android:text="@string/stu_update"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stu_edit_lastName" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <Button
        android:id="@+id/stu_delete"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="6.5dp"
        android:layout_marginTop="13dp"
        android:background="#ffcc0000"
        android:text="@string/stu_delete"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/stu_edit_lastName" />

</android.support.constraint.ConstraintLayout>