<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_subject_activity">

    <EditText
        android:id="@+id/sub_in_subName"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:background="#FF424242"
        android:ems="10"
        android:hint="@string/sub_add_sub"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sub_in_id"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:background="#FF424242"
        android:ems="10"
        android:hint="@string/sub_add_id"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_in_subName" />

    <Button
        android:id="@+id/add_sub_add"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:background="@color/colorPrimary"
        android:text="@string/sub_add"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_in_id" />

</android.support.constraint.ConstraintLayout>