<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grade_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6.5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="0dp">

            <TextView
                android:id="@+id/gr_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:text="@string/grade_id_label"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gr_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toEndOf="@+id/gr_id_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gr_sid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:text="@string/student_id_label"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gr_id_label" />

            <TextView
                android:id="@+id/gr_sid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toEndOf="@+id/gr_sid_label"
                app:layout_constraintTop_toBottomOf="@+id/gr_id_label" />

            <TextView
                android:id="@+id/gr_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:text="@string/fullname"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:typeface="normal"
                app:layout_constraintStart_toEndOf="@+id/gr_sid"
                app:layout_constraintTop_toBottomOf="@+id/gr_id_label" />

            <TextView
                android:id="@+id/gr_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toEndOf="@+id/gr_name_label"
                app:layout_constraintTop_toBottomOf="@+id/gr_id_label" />

            <TextView
                android:id="@+id/gr_subject_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:text="@string/subject"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gr_sid_label" />

            <TextView
                android:id="@+id/gr_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gr_subject_label"
                app:layout_constraintTop_toBottomOf="@+id/gr_sid_label" />

            <TextView
                android:id="@+id/gr_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:text="@string/score"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gr_subject"
                app:layout_constraintTop_toBottomOf="@+id/gr_sid_label" />

            <TextView
                android:id="@+id/gr_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gr_score_label"
                app:layout_constraintTop_toBottomOf="@+id/gr_sid_label" />

            <TextView
                android:id="@+id/gr_grade_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:text="@string/grade_label"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gr_grade"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gr_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>