<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/student_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6.5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_margin="0dp"
        android:padding="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="0dp">

            <ImageView
                android:id="@+id/studentAvatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/student_avatar_context"
                android:cropToPadding="false"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="64dp" />

            <TextView
                android:id="@+id/st_lastName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:text="@string/lastname"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/st_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/st_lastName_label"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".5" />

            <TextView
                android:id="@+id/st_firstName_label"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:text="@string/firstname"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:id="@+id/st_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/st_firstName_label"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="77dp" />

            <TextView
                android:id="@+id/st_sid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/student_id_label"
                android:textAlignment="gravity"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3" />

            <TextView
                android:id="@+id/st_sid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="1"
                android:textAlignment="gravity"
                android:textColor="@android:color/darker_gray"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>